# ITMO_ICT_WebDevelopment_2024-2025

students/k3339/Ilia_Shapovlaov/: pyproject.toml
students/k3339/Ilia_Shapovlaov/docs/docs/lr1/: task1.md  task2.md  task4.md  task5.md
students/k3339/Ilia_Shapovlaov/lab1/task1/: client.py  server.py
students/k3339/Ilia_Shapovlaov/lab1/task3/: index.html
students/k3339/Ilia_Shapovlaov/lab1/task4/: server_chat.py
students/k3339/Ilia_Shapovlaov/lab1/task5/: server.py
students/k3339/Ilia_Shapovlaov/laboratory_works/lab1/: .ruff.toml
students/k3339/Shapovlaov_Ilia/laboratory_works/docs/: mkdocs.yml
students/k3339/Shapovlaov_Ilia/laboratory_works/docs/docs/: index.md
students/k3339/Shapovlaov_Ilia/laboratory_works/lab1/: pyproject.toml
students/k3339/Shapovlaov_Ilia/laboratory_works/lab1/task2/: client.py  server.py
students/k3339/Shapovlaov_Ilia/laboratory_works/lab1/task3/: server.py
students/k3339/Shapovlaov_Ilia/laboratory_works/lab1/task4/: client_chat.py  server_chat.py
students/k3339/Shapovlaov_Ilia/laboratory_works/lab1/task5/: server.py
students/k3339/Shapovlaov_Ilia/practical_works/first/: pyproject.toml
students/k3339/Shapovlaov_Ilia/practical_works/first/django_project_shapovalov/django_project_shapovalov/: settings.py
students/k3339/Shapovlaov_Ilia/practical_works/first/django_project_shapovalov/project_first_app/: admin.py  models.py  urls.py
students/k3339/Shapovlaov_Ilia/practical_works/first/django_project_shapovalov/project_first_app/migrations/: 0001_initial.py
(+34 files in other folders)
