[tool.poetry]
name = "ilia-shapovlaov"
version = "0.1.0"
description = ""
authors = ["ShapovalovIlia <ilia-shapvalov04@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.46"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
